fix input pixel shift of typing and placeholder

--- a/src/app/chat-box/chat-window/chat-window.component.scss
+++ b/src/app/chat-box/chat-window/chat-window.component.scss
@@ -66,6 +66,7 @@
 }
 
 .chat-input {
+  padding-left: 10px;
   height: 32px;
   align-self: flex-start;
   border-bottom: 4px solid #e5e5e5;
